# BetweenUs

./: .gitignore  App Store 提审资料清单.md  README.md  render.yaml  快速开始.md  用户协议.md  用户隐私选择.md  真实服务接入与发布清单.md  隐私政策.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  billing.py  reports.py  sessions.py  system.py
backend/app/core/: config.py
backend/app/db/: models.py  session.py
backend/app/schemas/: auth.py  billing.py  common.py  report.py  session.py  system.py
backend/app/services/: ai_providers.py  apple_services.py  audio_storage.py  auth_service.py  billing_service.py  container.py  pipeline.py  pricing.py  progress.py  session_service.py
backend/app/workers/: celery_app.py  tasks.py
backend/docker/: start-web.sh  start-worker.sh
backend/scripts/: backup_postgres.sh  check_backend_ready.sh
backend/tests/: .pytest_betweenus.db  conftest.py  test_api_flow.py  test_asr_volc.py  test_pricing.py  test_progress.py
deploy/china/: .env  Caddyfile  docker-compose.yml  release.sh
ios/: project.yml
ios/BetweenUs.xcodeproj/: project.pbxproj
ios/Resources/: BetweenUs.storekit  sample_conflict.m4a
ios/Sources/App/: AppConfig.swift  AppState.swift  BetweenUsApp.swift  BetweenUsTheme.swift  RootTabView.swift
ios/Tests/: APIClientURLTests.swift  SecureAuthStoreTests.swift  UsageUnitPolicyTests.swift
site/: index.html
site/assets/: styles.css
site/support/: index.html
(+22 files in other folders)
